# manhattan

./: .coveragerc  .dockerignore  .editorconfig  .env-sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  Dockerfile  LICENSE  Pipfile  README.md  compile_python.sh  deploy_docker.sh  docker-compose.yml  docker-entrypoint.sh  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
accounts/: admin.py  forms.py  models.py  pipeline.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20190311_1510.py  0002_auto_20190313_1104.py  0002_auto_20190314_0819.py  0003_auto_20190531_1456.py  0004_alter_customuser_options.py  0005_customuser_orcid.py  0006_customuser_cuerpo_pod.py
indo/: admin.py  apps.py  filters.py  forms.py  middleware.py  models.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
indo/fixtures/: seed.json
indo/migrations/: 0001_initial.py  0002_auto_20190405_1408.py  0002_auto_20200131_1244.py  0002_resolucion.py  0003_auto_20190531_1456.py  0003_auto_20200131_1245.py  0003_auto_20210531_1136.py  0004_auto_20190605_1105.py  0004_auto_20200131_1409.py  0004_auto_20210602_1430.py  0004_auto_20210909_0848.py  0005_auto_20190606_1412.py  0005_auto_20200203_1316.py  0005_auto_20210924_1453.py  0006_auto_20190611_1019.py  0006_auto_20200207_0919.py  0006_auto_20210927_1029.py  0007_alter_rightssupport_options.py  0007_auto_20190618_1401.py  0007_auto_20200528_1143.py  0008_auto_20200611_1002.py  0008_convocatoria_fecha_max_modificacion_equipos.py  0008_merge_20211025_0957.py  0009_auto_20200622_0844.py  0009_auto_20211025_1338.py  0009_proyecto_id_uxxi.py  0010_auto_20201019_1446.py  0010_auto_20211202_1447.py  0010_merge_20211027_1413.py  0011_alter_proyecto_centro.py  0011_auto_20201020_1450.py  0012_auto_20201023_1034.py  0012_evaluadorproyecto_alter_proyecto_options_and_more.py  0012_merge_20220114_1425.py  0013_auto_20201026_1053.py  0013_merge_20220203_1912.py  0013_proyecto_prauz_tipo_alter_proyecto_contexto_and_more.py  0014_auto_20201030_1510.py  0014_proyecto_area.py  0014_proyecto_prauz_contenido_proyecto_prauz_titulo_and_more.py  (+49 more)
indo/templatetags/: custom_tags.py
manhattan_project/: context_processors.py  settings-sample.py  settings.py  urls.py  wsgi.py
static/css/: base.css  iconos.css  signin.css
static/favicons/: site.webmanifest
static/pptx/: MOOC.pptx  PICT.pptx  PIEC.pptx  PIET.pptx  PIIDUZ.pptx  PIPOUZ.pptx  PISOC.pptx  PRACUZ.pptx  PRAUZ.pptx
templates/: 403.html  404.html  500.html  ayuda.html  base.html  custom_p.html  custom_p_help_over_field.html  home.html
templates/corrector/: correccion.html  mis_memorias.html
templates/evaluador/: evaluacion.html  mis_proyectos.html
templates/gestion/: evaluacion.html  impersonate.html
templates/memoria/: detail.html  marc.xml  (+3 more)
(+66 files in other folders)
