[project]
name = "manhattan"
version = "2024.11.21"
description = "Gestión de proyectos de Innovación Docente"
requires-python = ">=3.10.15"
dependencies = [
    "crispy-bootstrap5",
    "django~=5.1",
    "django-annoying",
    "django-crispy-forms",
    "django-filter",
    "django-summernote",
    "django-tables2",
    "django-templated-email",
    "huey",
    "mysqlclient",
    "nh3",
    "pypandoc",
    "python-magic",
    "python3-saml",
    "social-auth-app-django",
    "social-auth-core[saml]",
    "tablib",
    "weasyprint",
    "zeep",
]

[tool.black]
skip-string-normalization = true
line-length = 99
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.djlint]
# H021 - Inline styles should be avoided.
# T002 - Double quotes should be used in tags. Ex {% extends "this.html" %}
ignore = "H021,T002"
profile = "django"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"
use_parentheses = true
line_length = 99

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "99"

[tool.ruff]
# <https://docs.astral.sh/ruff/configuration/>
line-length = 99

[tool.ruff.format]
# Use single quotes for non-triple-quoted strings.
quote-style = "single"

[tool.ruff.lint]
# <https://flakes.orsinium.dev/>
ignore = [
    "A003", # Allow shadowing class attribute: django uses id.
    "B904", # Allow unchained exceptions: it's fine to raise 404 in django.
    "E712", # Allow using if x == False, as it's not always equivalent to if x.
    # "E501", # line-too-long
    "UP032", # Python f-strings are not yet supported by xgettext
    # "W191", # tab-indentation
]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # flake8-bugbear: security warnings
    "C",  # flake8-coding, flake8-comprehensions, flake8-commas
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
dev-dependencies = [
    "black",
    "coverage",
    "django-debug-toolbar",
    "django-fastdev",
    "django-stubs",
    "django-upgrade",
    "djhtml",
    "isort",
    "mypy",
    "pre-commit",
    "pylint",
    "pyupgrade",
    "rope",
    "types-requests",
]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
